* Revert Fuse.Enumerable to a mixin and remove it as a dependency for Fuse.Range. [jddalton]

* After further study change `1 * n` back to to `+n` for quick numeric conversions. [Kean Tan]

* Ensure Fuse.RegExp's \s fix is done in a non-capturing group. [jddalton]

* Fix typo in STRING_REPLACE_COERCE_FUNCTION_TO_STRING bug test key. [jddalton, kangax]

* Stop Opera 9.25 Fuse.Array#slice from clipping results when the end index falls on an undefined index. [jddalton]

* Remove support for Fuse.Function#argumentNames. [jddalton]
  Note: Backwards compatibility warning.

* Switch to element decorator patterns instead of extending the native dom elements. [FuseJS LH #29] [jddalton]
  Note: Backwards compatibility warning.
    - Reorganized event.js
    - Remove unused functionality from unittest.js
    - Convert some unit tests to use the new element decorators

* Add support for inspecting Fuse's Array, Element, Event, Enumerable, Hash, and String plugin properties. [Prototype LH #787] [jddalton, jedediah]

* Add support for the W3C ElementTraversal interface in traversal.js. [jddalton, Diego Perini]

* Ensure Element#getStyle checks isNull() before other calculations. [jddalton]

* Optimize Element className methods by removing support for edge case whitespace such as newlines and tabs. [jddalton, kangax]

* Changed the Class API for calling a super method in favor of T.J. Crowder's approach. [jddalton, kangax, T.J. Crowder]
  Note: A subclassed method may call it's super by:
    Subclass.callSuper(this, 'subMethod', arg1, arg2, ...); // OR
    Subclass.callSuper(this, arguments, arg1, arg2, ...);   // OR
    subMethod.$super.call(this, arg2, arg2, ...);           // OR
    arguments.callee.$super.call(this, arg2, arg2, ...);

* unit test: Correct Element#getStyle width/height test in IE6. [jddalton]

* Store RegExp patterns created while executing Element#removeClassName in a cache. [jddalton, Garrett Smith, kangax, YUI Team]
